cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/template__trinity-large-preview:free-sec__row_10_update_3_template_20260324_195058.yaml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  EC2KeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Sub '${AWS::StackName}-keypair'
      KeyType: rsa

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Fn::ImportValue:
          !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64'
      InstanceType: t3.micro
      KeyName: !Ref EC2KeyPair
      BlockDeviceMappings:
        - DeviceName: /dev/xvdb
          VirtualName: ephemeral0
        - DeviceName: /dev/xvdc
          VirtualName: ephemeral1
      NetworkInterfaces:
        - DeviceIndex: 0
          GroupSet:
            - !Ref InstanceSecurityGroup
          SubnetId: !ImportValue DefaultSubnetId
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-ec2'

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH access from specific IP
      VpcId: !ImportValue DefaultVpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 203.0.113.0/24
          Description: SSH access from corporate network

  InstanceSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt InstanceSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 203.0.113.0/24
      Description: SSH access from corporate network

Outputs:
  InstanceId:
    Description: EC2 Instance ID
    Value: !Ref EC2Instance
  PublicIP:
    Description: EC2 Instance Public IP
    Value: !GetAtt EC2Instance.PublicIp
  PublicDNS:
    Description: EC2 Instance Public DNS
    Value: !GetAtt EC2Instance.PublicDnsName
  KeyPairName:
    Description: SSH Key Pair Name
    Value: !Ref EC2KeyPair
